Deneme Musteri IDD

--- a/MvcStok/Views/Musteri/Index.cshtml
+++ b/MvcStok/Views/Musteri/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
 
         <tr>
-            <th>MUSTERIID</th>
+            <th>MUSTERIIDD</th>
             <th>MUSTERIAD</th>
             <th>MUSTERISOYAD</th>
             <th>SİL</th>
